--- a/SafeBible2/SafeBible_ios/SafeBible/zh-Hans.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/zh-Hans.lproj/Localizable.strings
@@ -90,7 +90,8 @@
 /* Notebook files in list */
 "Notebooks" = "笔记本电脑";
 
-/* Notes list view page title */
+/* Notes Cell Title
+   Notes list view page title */
 "Notes" = "笔记";
 
 /* Default action in Alert */
@@ -109,6 +110,9 @@
 
 /* Menu option to share verse with others */
 "Share" = "分享";
+
+/* Clickable cell title */
+"Share Bible App" = "分享圣经应用";
 
 /* Clickable cell title */
 "Share SafeBible" = "分享SafeBible";
