--- a/SafeBible2/SafeBible_ios/SafeBible/de.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/de.lproj/Localizable.strings
@@ -90,7 +90,8 @@
 /* Notebook files in list */
 "Notebooks" = "Notebooks";
 
-/* Notes list view page title */
+/* Notes Cell Title
+   Notes list view page title */
 "Notes" = "Anmerkungen";
 
 /* Default action in Alert */
@@ -109,6 +110,9 @@
 
 /* Menu option to share verse with others */
 "Share" = "Aktie";
+
+/* Clickable cell title */
+"Share Bible App" = "Share Bible App";
 
 /* Clickable cell title */
 "Share SafeBible" = "Teilen Sie SafeBible";
