--- a/SafeBible2/SafeBible_ios/SafeBible/ro.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/ro.lproj/Localizable.strings
@@ -90,7 +90,8 @@
 /* Notebook files in list */
 "Notebooks" = "Laptopuri";
 
-/* Notes list view page title */
+/* Notes Cell Title
+   Notes list view page title */
 "Notes" = "notițe";
 
 /* Default action in Alert */
@@ -109,6 +110,9 @@
 
 /* Menu option to share verse with others */
 "Share" = "Acțiune";
+
+/* Clickable cell title */
+"Share Bible App" = "Împărțiți aplicația biblic";
 
 /* Clickable cell title */
 "Share SafeBible" = "Distribuiți SafeBible";
