--- a/SafeBible2/SafeBible_ios/SafeBible/uk.lproj/Localizable.strings
+++ b/SafeBible2/SafeBible_ios/SafeBible/uk.lproj/Localizable.strings
@@ -90,7 +90,8 @@
 /* Notebook files in list */
 "Notebooks" = "Ноутбуки";
 
-/* Notes list view page title */
+/* Notes Cell Title
+   Notes list view page title */
 "Notes" = "Примітки";
 
 /* Default action in Alert */
@@ -109,6 +110,9 @@
 
 /* Menu option to share verse with others */
 "Share" = "Частка";
+
+/* Clickable cell title */
+"Share Bible App" = "Частка Біблії App";
 
 /* Clickable cell title */
 "Share SafeBible" = "Поділитися SafeBible";
